kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /foo(/|$)(.*)
        pathType: Exact
        backend:
          service:
            name: kube-foo-svc
            port: 
              number: 80
      - path: /bar(/|$)(.*)
        pathType: Exact
        backend:
          service:
            name: kube-bar-svc
            port: 
              number: 80
